admin-console/src/main/webapp/resources/administration/css/entando-admin-console-default-theme.css
/* ... */
.comment-box{
    padding: 0px 10px 0px 0px;
}
.btn-delete-comment{
    margin: 2px;
}
.drawer-pf-custom {
    border: 0px solid #d1d1d1 !important;
}
.comment-box-panel{
    max-height: 135px !important;
    overflow-y: auto;
}
.comment-panel-insert{
    text-align: end;
    padding: 5px 13px 6px 0;
}
.user-notification{
    font-size: 13px;
    font-weight: 600;
}
.time-notifications{
    font-size: 11px !important;
    color: #9c9c9c !important;
}
.like-notifications{
    font-size: 14px;
}
.user-notification-comment, .avatar-utente-comment{
    font-size:11px;
    text-shadow: none;
}
.btn-submit-spacer{
    margin: 4px 0 0 0;
}
.notification-active{
    background-color: #4d5258;
}
.notification-active .fa{
    color: #fff !important;
}
.required-icon-iterator{
    font-size: 8px;
    line-height: 18px;
    color: #4e4e4e;
    margin-left: -17px;
}
.spacer-right-on-form{
    margin: 0px 4px 9px 13px;
    line-height: 27px;
    font-size: 13px;
    font-weight: 600;
}
.button-position-on-save{
    text-align: end;
    padding-right: 10px;
}
.esclamation-big{
    font-size: 10em;
    color: #72767b;
}
.button-fixed-width{
    width: 100px;
    margin: 3px;
}
.esclamation-underline{
    font-size:2em;
}
.esclamation-underline-text{
    font-size:1.7em;
}
.spacer-form{
    padding: 0 0 10px 0
}
.spacer-form2{
    margin-bottom: 8px;
}
#notifications-badge{
    background-color: #c20000;
    color: #fff;
    border-radius: 50%;
    position: absolute;
    top: 12px;
    right: 4px;
    padding: 3px 5px !important;
    font-size: 10px !important;
    cursor: pointer;
}
.well-auto-height{
    padding: 2em;
    overflow:hidden;
}
.navbar-pf-vertical .nav .nav-item-iconic {
    text-decoration: none;
}
#stream-updates-alert{
    text-align: center;
    cursor: pointer;
}
.navbar-nav .caret {
    width: 12px !important;
    margin-left: 3px;
}
#userDropdown a, #preview-portal a, #infoHeader a {
    padding: 15px;
    margin-top: 5px;
    line-height: 20px;
}
#userDropdown>a, #preview-portal>a, #languageDropdown>a {
    color:#c1c1c1;
}
#userDropdown>a:hover, #preview-portal>ahover{
    color:#fff;
}
/* setting nav bar icons font-size */
#languageDropdown .fa, #preview-portal .fa, #infoHeader .fa, #userDropdown .fa {
    font-size: inherit;
}
.entando-development{
    line-height: 36px;
    margin-left: 7em;
    text-transform: capitalize;
}
.treeInteractionButtons{
    font-size: 13px;
}
.green{
    color: green;
}
#pageTree .statusField i.fa {
    font-size: 15px;
    margin-top: 6px;
}
.table-view-pf-actions .btn, .table-view-pf-actions .dropdown-toggle{
    background: transparent;
}
.fa-question-circle-o{
    color:#72767b !important;
}
.dropdown-menu.dropdown-menu-right {
    right: -9px !important;
    margin-top: 0px !important;
}
.page-title-container{
    font-weight: bold;
}
.page-title-caret:before{
    content: "\2039";
    color: #aaabad;
    margin-right: 6px;
    vertical-align: middle;
    font-family: monospace;
}
.table-in-col10{
    padding: 0px 0 0 6px;
}
.required-fields{
    color: #aaabad;
    font-size: 12px;
}
#type-width-custom .input-group[class*=col-]{
    padding-left: 20px !important;
    padding-right: 20px !important;
}
.foti_class option:before {
    font-family: FontAwesome;
    content: "\f10c";
    display: inline-block;
    padding-right: 3px;
    vertical-align: middle;
    color: #0086cc;
    font-size: 15px !important;
}
.foti_class option:checked:before {
    font-family: FontAwesome;
    content: "\f192";
    display: inline-block;
    padding-right: 3px;
    vertical-align: middle;
    color: #0086cc;
    font-size: 15px !important;
}
#form-custom-select .form-control , output {
    font-size: 15px !important;
    line-height: 1.66666667;
    color: #363636;
    display: block;
}
#form-custom-select2 .form-control , output {
    font-size: 15px !important;
    line-height: 1.66666667;
    color: #363636;
    display: block;
}
.col-10-checkbox-list{
    margin-left:-20px;
}
ul {
    list-style-type: none;
}
.search-label{
    font-size: 16px;
}
.table-w-3{
    width: 3%;
}
.table-w-5{
    width: 5%;
}
.table-w-10{
    width: 10%;
}
.table-w-15{
    width: 15%;
}
.table-w-20{
    width: 20%;
}
.table-w-45{
    width: 45%;
}
.table-w-50{
    width: 50%;
}
.table-w-60{
    width: 60%;
}
.table-w-70{
    width: 70%;
}
.table-txt-wrap{
    white-space: normal !important;
    word-wrap: break-word !important;
}
.filter-list{
    z-index: 99;
    position: absolute;
    right: 20px;
    top: 30px;
}
.searchPanel .panel {
    margin-bottom: 20px;
    background-color: #fff;
    border: 0px solid transparent;
    border-radius: 1px;
    box-shadow: none;
}
.searchPanel .panel-group .panel-heading {
    background-image: none;
}
.searchPanel .panel-group .panel-heading+.panel-collapse .panel-body {
    border-top: 1px solid #ecebeb;
}
.searchPanel .panel-group .panel-title>a {
    color: #4d5258;
    font-weight: 400;
    font-size: 13px;
}
.searchPanel .panel-group .panel-title>a:after {
    margin-left: 10px;
}
.login-page {
    min-height: 100vh;
    padding-top: 40px;
}

.login-page > * {
    float: none;
}

.left-wrapper, .right-wrapper {
    width: 89%;
    margin: auto;
    color: #fff;
}

.left-wrap-cont {
    margin: 0 auto;
    padding: 0;
}

/* --------------- Display e Visibility --------------- */
.display-block {
    display: block;
}
.display-inline {
    display: inline;
}
.display-inline-block {
    display: inline-block;
}
.display-table-cell {
    display: table-cell;
}
/* --------------- margini e padding --------------- */
.mt-5 {
    margin-top: 5px;
}
.mt-10 {
    margin-top: 10px;
}
.mt-20 {
    margin-top: 20px;
}
.mt-40 {
    margin-top: 40px;
}
.mt-60 {
    margin-top: 60px;
}
.no-mt {
    margin-top: 0;
}
.mb-5 {
    margin-bottom: 5px;
}
.mb-10 {
    margin-bottom: 10px;
}
.mb-20 {
    margin-bottom: 20px;
}
.mb-40 {
    margin-bottom: 40px;
}
.mb-60 {
    margin-bottom: 60px;
}
.no-mb {
    margin-bottom: 0;
}
/* ... */

